<resources>
    <string name="app_name">login_practice</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_your_email">Input your email</string>
    <string name="sign_up">Sign up</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="login_page">Login Page</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
</resources>